fix accuracy