@@ -3,6 +3,12 @@
  * or more contributor license agreements. Licensed under the Elastic License
  * 2.0; you may not use this file except in compliance with the Elastic License
  * 2.0.
+ *
+ * The impleementation of inverse hyperbolic cosine function is derived from
+ * the Go programming language's math/acosh implementation.
+ * Copyright (c) The Go Authors. All rights reserved.
+ * Use of this source code is governed by the BSD 3-Clause License
+ * that can be found in the Go distribution's LICENSE file.
  */
 
 package org.elasticsearch.xpack.esql.expression.function.scalar.math;
@@ -26,6 +32,9 @@ import java.util.List;
  */
 public class Acosh extends AbstractTrigonometricFunction {
     public static final NamedWriteableRegistry.Entry ENTRY = new NamedWriteableRegistry.Entry(Expression.class, "Acosh", Acosh::new);
+
+    private static final double LN2 = Math.log(2);
+    private static final double LARGE = (double) (1L << 28);
 
     @FunctionInfo(
         returnType = "double",
@@ -59,7 +68,7 @@ public class Acosh extends AbstractTrigonometricFunction {
 
     @Override
     public Expression replaceChildren(List<Expression> newChildren) {
-        return new Acosh(source(), newChildren.get(0));
+        return new Acosh(source(), newChildren.getFirst());
     }
 
     @Override
@@ -69,9 +78,23 @@ public class Acosh extends AbstractTrigonometricFunction {
 
     @Evaluator(warnExceptions = ArithmeticException.class)
     static double process(double val) {
-        if (val < 1) {
+        // https://github.com/golang/go/blob/455282911aba7512e2ba045ffd9244eb97756247/src/math/acosh.go
+        if (val < 1.0 || Double.isNaN(val)) {
             return Double.NaN;
         }
-        return Math.log(val + Math.sqrt(val * val - 1));
+        if (val == 1.0) {
+            return 0.0;
+        }
+        if (val >= LARGE) {
+            return StrictMath.log(val) + LN2;
+        }
+        if (val > 2.0) {
+            final double xx = val * val;
+            final double s = StrictMath.sqrt(xx - 1.0);
+            return StrictMath.log(2.0 * val - 1.0 / (val + s));
+        }
+
+        final double t = val - 1.0;
+        return StrictMath.log1p(t + StrictMath.sqrt(2.0 * t + t * t));
     }
 }
